<resources>
    <string name="app_name">Weather_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_not_found">Not found</string>
    <string name="action_change_city">Change city</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Change name</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_3_days">3 days</string>
    <string name="action_5_days">5 days</string>
    <string name="feedback_form">Форма обратной связи</string>
    <string name="about_developer">О разработчике</string>

    <string name="network_error">Error network</string>

    <!-- Иконки погоды -->
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="humidity_info">Humidity \n %s</string>
    <string name="pressure_info">Pressure \n %s</string>

    <string name="spinner_title">Выберите город</string>
    <string name="add_city">Add city</string>
    <string name="clear_db">Clear DB</string>
</resources>
