<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="10"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_3_days"
        android:orderInCategory="10"
        android:title="@string/action_3_days"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_5_days"
        android:orderInCategory="20"
        android:title="@string/action_5_days"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="40"
        android:title="@string/action_help"
        app:showAsAction="never" />

</menu>
